--- a/Source/Shiggycord/shiggycord.css
+++ b/Source/Shiggycord/shiggycord.css
@@ -3,11 +3,12 @@
 @import url(https://raw.githubusercontent.com/xdCoolesding/shiggycord/main/Source/Shiggycord/shigging.css);
 @import url(https://raw.githubusercontent.com/xdCoolesding/shiggycord/main/Source/Addons/radialstatus.css);
 @import url(https://raw.githubusercontent.com/xdCoolesding/shiggycord/main/Source/Addons/winbar.css);
-@import url("https://zuzumi-f.github.io/Moon-Rabbits-Dream-About-Virtual/release/pop.css");
+@import url(https://raw.githubusercontent.com/xdCoolesding/shiggycord/main/Source/Addons/userpopout.css);
+@import url(https://zuzumi-f.github.io/Moon-Rabbits-Dream-About-Virtual/release/pop.css);
 @import url(https://raw.githubusercontent.com/xdCoolesding/shiggycord/main/Source/Addons/settingsmodal.css);
 
 :root {
-  --sc-version: "1.1.2";
+  --sc-version: "1.1.3";
 }
 
 .theme-dark .container-YkUktl:before {
@@ -28,8 +29,7 @@
   display: block;
 }
 .buttons-uaqb-5 > .button-ejjZWC:first-child, #app-mount > div.appAsidePanelWrapper-ev4hlp > div.notAppAsidePanel-3yzkgB > div.app-3xd6d0 > div > div.layers-OrUESM.layers-1YQhyW > div > div > div > div > div > nav > div.scroller-WSmht3.thin-RnSY0a.scrollerBase-1Pkza4.fade-27X6bG > ul > li:nth-child(3),/*Nitro Button in Direct Messages*/
-#app-mount > div.appAsidePanelWrapper-ev4hlp > div.notAppAsidePanel-3yzkgB > div.app-3xd6d0 > div > div.layers-OrUESM.layers-1YQhyW > div > div > nav > ul > div.scroller-3X7KbA.none-1rXy4P.scrollerBase-1Pkza4 > div:nth-child(5),/*Discover Servers*/
-[mask="url(#62972d41-0c73-4c89-ac45-101880b12e52)"]/*ay i dont even know someone figure this one out please*/,
+[mask="url(#62972d41-0c73-4c89-ac45-101880b12e52)"]/*idk anymore*/,
 [aria-label="Threads"],/*Open Thread Icon in Toolbar */
 [aria-label="Notification Settings"] /*Notification Settings Icon in Toolbar*/, 
 [aria-label="New Group DM"]/*New Group DM in Friends Menu */, 
